added canvas and style

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <script defer src="script.js"></script>
     <title>Animations on trigger</title>
   </head>
-  <body></body>
+  <body>
+    <canvas id="canvas1"></canvas>
+  </body>
 </html>
